= New

* Correctly handle the case where nil or [] is passed as an argument to the IN
restriction.

* Added is_not_null as a nicer version of is_null.not

= 0.2.0 

* Changed the available join types to inner, left and right.

* Fix a bug where we used the wrong type in polymorphic association joins.

* Use with_scope when chaining filters, named_filters, and AR associations in
order to keep the filter data instead of passing the query parameters directly
and combining them in order to make this work correctly with AR.

* Fix a bug when calling .filter in a chain of associations and named filters.

* Don't include conditions unless there are actually conditions specified.

* Fix a bug where the first and last methods would fail.

* Delegate array methods through to the result of the filter.

* Add proxy_options to mimic the API of named_scope for getting the options
that result from a given query.

* Support chaining with AR associations... (i.e. Blog.posts.published)

* Support has_many and has_one :through

= 0.1.4

* Join on both the id and type for polymorphic joins.

* Fix a bug where we were using the incorrect table names in joins and
ordering with joins.

* Change != to the SQL standard <>.

* Fix invalid SQL generated by not_all and not_any.

* Detect count/size/length queries and do the appropriate distinct clause for
those count queries.

* Do DISTINCT searches for queries that involve specific types of joins.

* Allow passing a join type as the first argument to having.

* Restructured the explicit join API

* Raise exceptions when doing an explicit join using columns that don't exist.

* Allow explicit joins on values: left_join(:class_name, :table_alias, :rcol
=> 'Post'...)

* Added a filter_class method to the DSL for getting the class that is being
filtered.

* Added custom join feature: left_join(:table_name, :table_alias, :rcol =>
:lcol...)

* Changed custom exceptions to subclass StandardError and not crash the entire